<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="by">By:</string>
    <string name="app_name">JsonPlaceholder Typicode</string>
    <string name="main">main</string>
    <string name="posts">posts</string>
    <string name="vector">vector</string>
    <string name="Users">Users</string>
    <string name="users">users</string>
    <string name="profile">profile</string>
    <string name="email">Email:</string>
    <string name="comments">Comments</string>
    <string name="show_all">Show All</string>
    <string name="fl_name">Full Name:</string>
    <string name="username">Username</string>
    <string name="album_name"> Album name</string>
    <string name="album_image" />
    <string name="company_name">Company Name:</string>
    <string name="website">Website:</string>
    <string name="phone">Phone:</string>
    <string name="business_services">Business Services:</string>
    <string name="street">Street:</string>
    <string name="suite">Suite:</string>
    <string name="city">City:</string>
    <string name="zipcode">Zipcode:</string>
    <string name="show_on_map">Show On Map</string>
    <string name="company">Company</string>
    <string name="address">Address</string>
    <string name="todos">My ToDos</string>
</resources>