<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/cv_post"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_marginHorizontal="16dp"
	android:foreground="?android:attr/selectableItemBackground">
	<!--    The last line is added to add the ripple effect on click-->
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="16dp">
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:orientation="horizontal">
			<TextView
				style="@style/Body1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/street"
				android:textColor="@color/text_02" />
			<TextView
				android:id="@+id/street"
				style="@style/Body1"
				android:layout_marginStart="8dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textColor="@color/text_01" />
		</LinearLayout>
		
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:orientation="horizontal">
			<TextView
				style="@style/Body1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/suite"
				android:textColor="@color/text_02" />
			<TextView
				android:id="@+id/suite"
				style="@style/Body1"
				android:layout_marginStart="8dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textColor="@color/text_01" />
		</LinearLayout>
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:orientation="horizontal">
			<TextView
				style="@style/Body1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/city"
				android:textColor="@color/text_02" />
			<TextView
				android:id="@+id/city"
				style="@style/Body1"
				android:layout_marginStart="8dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textColor="@color/text_01" />
		</LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:orientation="horizontal">
			<TextView
				style="@style/Body1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/zipcode"
				android:textColor="@color/text_02" />
			<TextView
				android:id="@+id/zipcode"
				style="@style/Body1"
				android:layout_marginStart="8dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textColor="@color/text_01" />
		</LinearLayout>
		<TextView
			android:id="@+id/show_on_map"
			style="@style/Header1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="16dp"
			android:text="@string/show_on_map"
			android:textColor="@color/links"
			android:gravity="center_horizontal"/>
	</LinearLayout>

</androidx.cardview.widget.CardView>