<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/cv_post"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_marginHorizontal="16dp"
	android:foreground="?android:attr/selectableItemBackground">
	<!--    The last line is added to add the ripple effect on click-->
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="16dp">
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:orientation="horizontal">
			<TextView
				style="@style/Body1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/company_name"
				android:textColor="@color/text_02" />
			<TextView
				android:id="@+id/cm_name"
				style="@style/Body1"
				android:layout_marginStart="8dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textColor="@color/text_01" />
		</LinearLayout>
		
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:orientation="horizontal">
			<TextView
				style="@style/Body1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/fl_name"
				android:textColor="@color/text_02" />
			<TextView
				android:id="@+id/full_name"
				style="@style/Body1"
				android:layout_marginStart="8dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textColor="@color/text_01" />
		</LinearLayout>
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:orientation="horizontal">
			<TextView
				style="@style/Body1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/business_services"
				android:textColor="@color/text_02" />
			<TextView
				android:id="@+id/business_services"
				style="@style/Body1"
				android:layout_marginStart="8dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textColor="@color/text_01" />
		</LinearLayout>
	</LinearLayout>

</androidx.cardview.widget.CardView>